--- a/portfolio.html
+++ b/portfolio.html
@@ -110,116 +110,119 @@
               </button>
             </li>
           </ul>
-          <ul class="list">
-            <li class="flex-element">
-              <a class="link" href="">
-                <img
-                  class="img-style"
-                  src="./images/Portfolio/port-photo1.jpg"
-                  alt="bankapp"
-                  width="360"
-                />
-                <h2 class="title-text">Banking App Interface Concept</h2>
-                <p class="text">App</p>
-              </a>
-            </li>
-            <li class="flex-element">
-              <a class="link" href="">
-                <img
-                  class="img-style"
-                  src="./images/Portfolio/port-photo2.jpg"
-                  alt="payment"
-                  width="360"
-                />
-                <h2 class="title-text">Cashless Payment</h2>
-                <p class="text">Marketing</p>
-              </a>
-            </li>
-            <li class="flex-element">
-              <a class="link" href="">
-                <img
-                  class="img-style"
-                  src="./images/Portfolio/port-photo3.jpg"
-                  alt="laptop-mobile"
-                  width="360"
-                />
-                <h2 class="title-text">Meditation App</h2>
-                <p class="text">App</p>
-              </a>
-            </li>
-            <li class="flex-element">
-              <a class="link" href="">
-                <img
-                  class="img-style"
-                  src="./images/Portfolio/port-photo4.jpg"
-                  alt="driver"
-                  width="360"
-                />
-                <h2 class="title-text">Taxi Service</h2>
-                <p class="text">Marketing</p>
-              </a>
-            </li>
-            <li class="flex-element">
-              <a class="link" href="">
-                <img
-                  class="img-style"
-                  src="./images/Portfolio/port-photo5.jpg"
-                  alt="Illustrations"
-                  width="360"
-                />
-                <h2 class="title-text">Screen Illustrations</h2>
-                <p class="text">Design</p>
-              </a>
-            </li>
-            <li class="flex-element">
-              <a class="link" href="">
-                <img
-                  class="img-style"
-                  src="./images/Portfolio/port-photo6.jpg"
-                  alt="Girl"
-                  width="360"
-                />
-                <h2 class="title-text">Online Courses</h2>
-                <p class="text">Marketing</p>
-              </a>
-            </li>
-            <li class="flex-element">
-              <a class="link" href="">
-                <img
-                  class="img-style"
-                  src="./images/Portfolio/port-photo7.jpg"
-                  alt="Instagram"
-                  width="360"
-                />
-                <h2 class="title-text">Instagram Stories Concept</h2>
-                <p class="text">Design</p>
-              </a>
-            </li>
-            <li class="flex-element">
-              <a class="link" href="">
-                <img
-                  class="img-style"
-                  src="./images/Portfolio/port-photo8.jpg"
-                  alt="food"
-                  width="360"
-                />
-                <h2 class="title-text">Organic Food</h2>
-                <p class="text">Web Site</p>
-              </a>
-            </li>
-            <li class="flex-element">
-              <a class="link" href="">
-                <img
-                  class="img-style"
-                  src="./images/Portfolio/port-photo9.jpg"
-                  alt="late"
-                  width="360"
-                />
-                <h2 class="title-text">Fresh Coffee</h2>
-                <p class="text">Web Site</p>
-              </a>
-            </li>
-          </ul>
+
+          <div class="portfolio-flex">
+            <ul class="list">
+              <li class="flex-element">
+                <a class="link" href="">
+                  <img
+                    class="img-style"
+                    src="./images/Portfolio/port-photo1.jpg"
+                    alt="bankapp"
+                    width="360"
+                  />
+                  <h2 class="title-text">Banking App Interface Concept</h2>
+                  <p class="text">App</p>
+                </a>
+              </li>
+              <li class="flex-element">
+                <a class="link" href="">
+                  <img
+                    class="img-style"
+                    src="./images/Portfolio/port-photo2.jpg"
+                    alt="payment"
+                    width="360"
+                  />
+                  <h2 class="title-text">Cashless Payment</h2>
+                  <p class="text">Marketing</p>
+                </a>
+              </li>
+              <li class="flex-element">
+                <a class="link" href="">
+                  <img
+                    class="img-style"
+                    src="./images/Portfolio/port-photo3.jpg"
+                    alt="laptop-mobile"
+                    width="360"
+                  />
+                  <h2 class="title-text">Meditation App</h2>
+                  <p class="text">App</p>
+                </a>
+              </li>
+              <li class="flex-element">
+                <a class="link" href="">
+                  <img
+                    class="img-style"
+                    src="./images/Portfolio/port-photo4.jpg"
+                    alt="driver"
+                    width="360"
+                  />
+                  <h2 class="title-text">Taxi Service</h2>
+                  <p class="text">Marketing</p>
+                </a>
+              </li>
+              <li class="flex-element">
+                <a class="link" href="">
+                  <img
+                    class="img-style"
+                    src="./images/Portfolio/port-photo5.jpg"
+                    alt="Illustrations"
+                    width="360"
+                  />
+                  <h2 class="title-text">Screen Illustrations</h2>
+                  <p class="text">Design</p>
+                </a>
+              </li>
+              <li class="flex-element">
+                <a class="link" href="">
+                  <img
+                    class="img-style"
+                    src="./images/Portfolio/port-photo6.jpg"
+                    alt="Girl"
+                    width="360"
+                  />
+                  <h2 class="title-text">Online Courses</h2>
+                  <p class="text">Marketing</p>
+                </a>
+              </li>
+              <li class="flex-element">
+                <a class="link" href="">
+                  <img
+                    class="img-style"
+                    src="./images/Portfolio/port-photo7.jpg"
+                    alt="Instagram"
+                    width="360"
+                  />
+                  <h2 class="title-text">Instagram Stories Concept</h2>
+                  <p class="text">Design</p>
+                </a>
+              </li>
+              <li class="flex-element">
+                <a class="link" href="">
+                  <img
+                    class="img-style"
+                    src="./images/Portfolio/port-photo8.jpg"
+                    alt="food"
+                    width="360"
+                  />
+                  <h2 class="title-text">Organic Food</h2>
+                  <p class="text">Web Site</p>
+                </a>
+              </li>
+              <li class="flex-element">
+                <a class="link" href="">
+                  <img
+                    class="img-style"
+                    src="./images/Portfolio/port-photo9.jpg"
+                    alt="late"
+                    width="360"
+                  />
+                  <h2 class="title-text">Fresh Coffee</h2>
+                  <p class="text">Web Site</p>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
     </main>
