--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </section>
 
       <!--Переваги-->
-      <section class="list">
+      <section class="main-advantages list">
         <div class="container advantages">
           <h2 hidden class="feature-titles">Our advantages</h2>
           <ul class="list">
@@ -106,7 +106,7 @@
       </section>
 
       <!--Що робимо-->
-      <section class="section">
+      <section class="section-container">
         <div class="container">
           <h2 class="section-title">What are we doing</h2>
           <ul class="page-work list">
@@ -149,7 +149,6 @@
                 src="./images/Person1.jpg"
                 alt="Worker1"
                 width="264"
-                class="image-person"
               />
               <h3 class="title-text">Mark Guerrero</h3>
               <p class="text">Product Designer</p>
@@ -160,7 +159,6 @@
                 src="./images/Person2.jpg"
                 alt="Worker2"
                 width="264"
-                class="image-person"
               />
               <h3 class="title-text">Tom Ford</h3>
               <p class="text">Frontend Developer</p>
@@ -171,7 +169,6 @@
                 src="./images/Person3.jpg"
                 alt="Worker3"
                 width="264"
-                class="image-person"
               />
               <h3 class="title-text">Camila Garcia</h3>
               <p class="text">Marketing</p>
@@ -182,7 +179,6 @@
                 src="./images/Person4.jpg"
                 alt="Worker4"
                 width="264"
-                class="image-person"
               />
               <h3 class="title-text">Daniel Wilson</h3>
               <p class="text">UI Designer</p>
