--- a/portfolio.html
+++ b/portfolio.html
@@ -113,7 +113,6 @@
 
           <ul class="portfolio-flex list">
             <li class="flex-element">
-              <div class="container-flex">
                 <a class="link" href="">
                   <img
                     class="img-style"
@@ -121,13 +120,13 @@
                     alt="bankapp"
                     width="360"
                   />
+                  <div class="container-flex">
                   <h2 class="title-text">Banking App Interface Concept</h2>
                   <p class="text">App</p>
                 </a>
               </div>
             </li>
             <li class="flex-element">
-              <div class="container-flex">
               <a class="link" href="">
                 <img
                   class="img-style"
@@ -135,26 +134,26 @@
                   alt="payment"
                   width="360"
                 />
+                <div class="container-flex">
                 <h2 class="title-text">Cashless Payment</h2>
                 <p class="text">Marketing</p>
               </a>
             </div>
             </li>
             <li class="flex-element">
-              <div class="container-flex">
               <a class="link" href="">
                 <img
                   class="img-style"
                   src="./images/Portfolio/port-photo3.jpg"
                   alt="laptop-mobile"
                   width="360"/>
+                  <div class="container-flex">
                 <h2 class="title-text">Meditation App</h2>
                 <p class="text">App</p>
               </a>
             </div>
             </li>
             <li class="flex-element">
-              <div class="container-flex">
               <a class="link" href="">
                 <img
                   class="img-style"
@@ -162,27 +161,26 @@
                   alt="driver"
                   width="360"
                 />
+                <div class="container-flex">
                 <h2 class="title-text">Taxi Service</h2>
                 <p class="text">Marketing</p>
               </a>
             </div>
             </li>
             <li class="flex-element">
-              <div class="container-flex">
               <a class="link" href="">
                 <img
                   class="img-style"
                   src="./images/Portfolio/port-photo5.jpg"
                   alt="Illustrations"
-                  width="360"
-                />
+                  width="360"/>
+                <div class="container-flex">
                 <h2 class="title-text">Screen Illustrations</h2>
                 <p class="text">Design</p>
               </a>
               </div>
             </li>
             <li class="flex-element">
-              <div class="container-flex">
               <a class="link" href="">
                 <img
                   class="img-style"
@@ -190,13 +188,13 @@
                   alt="Girl"
                   width="360"
                 />
+                <div class="container-flex">
                 <h2 class="title-text">Online Courses</h2>
                 <p class="text">Marketing</p>
               </a>
               </div>
             </li>
             <li class="flex-element">
-              <div class="container-flex">
               <a class="link" href="">
                 <img
                   class="img-style"
@@ -204,13 +202,13 @@
                   alt="Instagram"
                   width="360"
                 />
+                <div class="container-flex">
                 <h2 class="title-text">Instagram Stories Concept</h2>
                 <p class="text">Design</p>
               </a>
               </div>
             </li>
             <li class="flex-element">
-              <div class="container-flex">
               <a class="link" href="">
                 <img
                   class="img-style"
@@ -218,13 +216,13 @@
                   alt="food"
                   width="360"
                 />
+                <div class="container-flex">
                 <h2 class="title-text">Organic Food</h2>
                 <p class="text">Web Site</p>
               </a>
               </div>
             </li>
             <li class="flex-element">
-              <div class="container-flex">
               <a class="link" href="">
                 <img
                   class="img-style"
@@ -232,6 +230,7 @@
                   alt="late"
                   width="360"
                 />
+                <div class="container-flex">
                 <h2 class="title-text">Fresh Coffee</h2>
                 <p class="text">Web Site</p>
               </a>
