--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </header>
 
     <!--Герой -->
-    <>
+    <main>
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
@@ -135,10 +135,8 @@
               />
             </li>
           </ul>
-          </div>
+        </div>
       </section>
-  
-      
 
       <!--Our team-->
       <section class="section-team">
