--- a/portfolio.html
+++ b/portfolio.html
@@ -25,19 +25,19 @@
     <!-- Шапка сайту -->
 
     <header class="main-header">
-      <div class="container">
+      <div class="container primary-header">
         <nav class="container main-nav">
           <a class="link-logo link" href="./index.html"
             >Web<span class="logo-text">Studio</span></a
           >
           <ul class="site-nav list">
-            <li class="item">
+            <li class="nav-content item">
               <a class="header-text link" href="./index.html"> Studio</a>
             </li>
-            <li class="item">
+            <li class="nav-content item">
               <a class="header-text link" href="./portfolio.html">Portfolio</a>
             </li>
-            <li class="item">
+            <li class="nav-content item">
               <a class="header-text link" href="">Contacts</a>
             </li>
           </ul>
